--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Hello World, website coming soon
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Aarre Entertainment</title>
+	<meta charset="UTF-8">
+	<meta name="description" content="Aarre Entertainment is a one man indie game development organization from Vaasa, Finland">
+	<meta name="keywords" content="indiegame, indie, gamedev, game development, vaasa, finland, unity, gaming, games, unity3d">
+	<meta name="author" content="Sebastian Laitila">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+	<h1>Aarre Entertainment</h1>
+	<h2>Welcome to our home on the internet</h2>
+
+<p><i>First, I would like to welcome you to this website. Please, take your time to explore my articles about game development and maybe our games.</i></p>
+</body>
+</html>
