--- a/index.html
+++ b/index.html
@@ -13,5 +13,15 @@
 	<h2>Welcome to our home on the internet</h2>
 
 <p><i>First, I would like to welcome you to this website. Please, take your time to explore my articles about game development and maybe our games.</i></p>
+<table>
+	<tr>
+		<td>
+			<a href="articles/making-games-with-kids.html">Five ways how I have been able to make a game in my free time with two children</a>
+		</td>
+		<td>
+			<a href="articles/game-ideas.html">Testing your game idea in five ways</a>
+		</td>
+	</tr>
+</table>
 </body>
 </html>
