--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-89811047-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 	<title>Aarre Entertainment</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Aarre Entertainment is a one man indie game development organization from Vaasa, Finland">
@@ -13,8 +23,11 @@
 	<h2>Welcome to our home on the internet</h2>
 
 <p><i>First, I would like to welcome you to this website. Please, take your time to explore my articles about game development and maybe our games.</i></p>
-<table>
+<table border="1" cellpadding="10">
 	<tr>
+		<td>
+			<b>ARTICLES</b>
+		</td>
 		<td>
 			<a href="articles/making-games-with-kids.html">Five ways how I have been able to make a game in my free time with two children</a>
 		</td>
@@ -22,6 +35,13 @@
 			<a href="articles/game-ideas.html">Testing your game idea in five ways</a>
 		</td>
 	</tr>
+	<tr>
+	<td>
+		<b>GAMES</b>
+	</td>
+	<td>
+		<a href="aarre/index.html"><img src="img/aarre.png" /> </a>
+	</td>
 </table>
 </body>
 </html>
