--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <meta name="google-site-verification" content="hKnM20xdcGHeeUw9jXAVdqgaezRIAFT5K5tostjlAWM" />
+<link href="https://fonts.googleapis.com/css?family=Bangers|Montserrat" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="aarreent.css" />
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -23,26 +25,8 @@
 	<h1>Aarre Entertainment</h1>
 	<h2>Welcome to our home on the internet</h2>
 
-<p><i>First, I would like to welcome you to this website. Please, take your time to explore my articles about game development and maybe our games.</i></p>
-<table border="1" cellpadding="10">
-	<tr>
-		<td>
-			<b>ARTICLES</b>
-		</td>
-		<td>
-			<a href="articles/making-games-with-kids.html">Five ways how I have been able to make a game in my free time with two children</a>
-		</td>
-		<td>
-			<a href="articles/game-ideas.html">Testing your game idea in five ways</a>
-		</td>
-	</tr>
-	<tr>
-	<td>
-		<b>GAMES</b>
-	</td>
-	<td>
-		<a href="aarre/index.html"><img src="img/aarre.png" /> </a>
-	</td>
-</table>
+<p><i>First, I would like to welcome you to this website. Please, take your time to explore my articles about game development and maybe our games.</i></p><a href="aarre/index.html"><img src="img/aarre.png" /> </a>
+
+<script type="text/javascript" src="http://output57.rssinclude.com/output?type=js&amp;id=1118155&amp;hash=1efd6e0ebb42d1117b7a98967332512b"></script>
 </body>
 </html>
