--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 <meta name="google-site-verification" content="hKnM20xdcGHeeUw9jXAVdqgaezRIAFT5K5tostjlAWM" />
-<link href="https://fonts.googleapis.com/css?family=Bangers|Montserrat" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="aarreent.css" />
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -22,11 +21,21 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+<div class="image-content-1">
+<div class="bordered-element">
 	<h1>Aarre Entertainment</h1>
 	<h2>Welcome to our home on the internet</h2>
-
-<p><i>First, I would like to welcome you to this website. Please, take your time to explore my articles about game development and maybe our games.</i></p><a href="aarre/index.html"><img src="img/aarre.png" /> </a>
-
-<script type="text/javascript" src="http://output57.rssinclude.com/output?type=js&amp;id=1118155&amp;hash=1efd6e0ebb42d1117b7a98967332512b"></script>
+	</div>
+</div>
+<div class="menu-content" ><div style="width:100%">
+<h3 class="bordered-element" >GAMES</h3>
+<a href="aarre/index.html"><img class="menu-item" src="img/aarre.png" /> </a>
+<a href="vapordrive/index.html"><img class="menu-item" src="img/vapordrive_512.png" /> </a>
+<a href="http://globalgamejam.org/2017/games/song-cardigans"><img class="menu-item" src="img/asbtc_512.png" /> </a>
+</div>
+</div>
+<div class="blog-content">
+<script type="text/javascript" src="http://output37.rssinclude.com/output?type=js&amp;id=1118155&amp;hash=1efd6e0ebb42d1117b7a98967332512b"></script>
+</div>
 </body>
 </html>
