--- a/vapordrive/index.html
+++ b/vapordrive/index.html
@@ -12,7 +12,7 @@
 
 </script>
 
-	<title>Aarre</title>
+	<title>vapordrive</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="A flower picking and treasure collection game for all ages on Android.">
 	<meta name="keywords" content="indiegame, indie, gamedev, game development, gamedev, finland, unity, gaming, games, unity3d, aarre, sandbox, 3d, kids, children, toddler">
@@ -23,18 +23,18 @@
 <body>
 <div class="image-content-1">
 <div class="bordered-element">
-	<h1>Aarre</h1>
-	<h2>A flower picking and treasure collection game for all ages on Android.</h2>
+	<h1>vapordrive</h1>
+	<h2>A vaporwave-themed driving and collection game</h2>
 	<a href="#privacy">Privacy Policy</a>
 	</div>
 </div>
 <div class="about-content">
 <p>
-Aarre means treasure in finnish. Any object can be of value for the right person, and Aarre explores this. It could be called a Pokémon of collecting random junk, as some objects are not as common as others.</p>
-<a href="https://play.google.com/store/apps/details?id=com.unity.aarregame"><img width="323" height="125" src="img/en_badge_web_generic.png"></a>
+Vapordrive is all about the aesthetics from the early to 90's, when 3d-graphics were bad and the funniest thing on TV was Seinfeld (seriously).</p>
+<!--a href="https://play.google.com/store/apps/details?id=com.unity.aarregame"><img width="323" height="125" src="img/en_badge_web_generic.png"></a-->
 <p>Created by: <a href="https://aarreentertainment.github.io">Aarre Entertainment</a></p>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/mcwrVRp6NoM" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Wq_0ew1B_W0" frameborder="0" allowfullscreen></iframe>
 </div>
 <div class="privacy-policy">
 <a name="privacy"><h1>PRIVACY POLICY</h1></a>
