--- a/index.html
+++ b/index.html
@@ -35,7 +35,14 @@
 </div>
 </div>
 <div class="blog-content">
-<script type="text/javascript" src="http://output37.rssinclude.com/output?type=js&amp;id=1118155&amp;hash=1efd6e0ebb42d1117b7a98967332512b"></script>
+<div id="rssincl-box-container-1118155"></div>
+<script type="text/javascript">
+(function() {
+  var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true;
+  s.src = 'http://output38.rssinclude.com/output?type=asyncjs&id=1118155&hash=30d2021f137b3731b8e8b988867bd388';
+  document.getElementsByTagName('head')[0].appendChild(s);
+})();
+</script>
 </div>
 </body>
 </html>
