--- a/index.html
+++ b/index.html
@@ -35,14 +35,9 @@
 </div>
 </div>
 <div class="blog-content">
-<div id="rssincl-box-container-1118155"></div>
-<script type="text/javascript">
-(function() {
-  var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true;
-  s.src = 'http://output38.rssinclude.com/output?type=asyncjs&id=1118155&hash=30d2021f137b3731b8e8b988867bd388';
-  document.getElementsByTagName('head')[0].appendChild(s);
-})();
-</script>
+<h3 class="bordered-element" >BOLG</h3><center>
+<iframe width="100%" height="700" src="https://aarreentertainment.wordpress.com/"></iframe>
+</center>
 </div>
 </body>
 </html>
