--- a/aarre/index.html
+++ b/aarre/index.html
@@ -31,10 +31,11 @@
 <div class="about-content">
 <p>
 Aarre means treasure in finnish. Any object can be of value for the right person, and Aarre explores this. It could be called a Pokémon of collecting random junk, as some objects are not as common as others.</p>
-<a href="https://play.google.com/store/apps/details?id=com.unity.aarregame"><img width="323" height="125" src="img/en_badge_web_generic.png"></a>
+<a href="https://play.google.com/store/apps/details?id=com.unity.aarregame"><img style="max-width:90%;height:auto;" src="img/en_badge_web_generic.png"></a>
 <p>Created by: <a href="https://aarreentertainment.github.io">Aarre Entertainment</a></p>
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/mcwrVRp6NoM" frameborder="0" allowfullscreen></iframe>
+<div class = "master-container">
+<div class = "intrinsic-container">
+<iframe src="https://www.youtube.com/embed/mcwrVRp6NoM" frameborder="0" allowfullscreen></iframe></div></div>
 </div>
 <div class="privacy-policy">
 <a name="privacy"><h1>PRIVACY POLICY</h1></a>
@@ -48,7 +49,7 @@ We may amend this privacy policy from time to time by posting a new version onli
 We may collect personal data that identifies you if you submit it to us. We may use this data to provide Services to you, improve our Services and contact you.
 </p><p>
 If you choose to log in to our Services by using social networking site credentials (such as Facebook Connect), the site may send us personal data that you have allowed it to share with us.
-</p><p>
+px</p><p>
 We do not collect personal data from children under 13. If you believe we have inadvertently collected such data, do contact us so we can obtain parental consent or remove such data.
 </p>
 <h3>Ad serving</h3>
