--- a/vapordrive/index.html
+++ b/vapordrive/index.html
@@ -25,7 +25,7 @@
 <div class="bordered-element">
 	<h1>vapordrive</h1>
 	<h2>A vaporwave-themed driving and collection game</h2>
-	<a href="#privacy">Privacy Policy</a>
+	<!--a href="#privacy">Privacy Policy</a-->
 	</div>
 </div>
 <div class="about-content">
@@ -34,9 +34,11 @@ Vapordrive is all about the aesthetics from the early to 90's, when 3d-graphics 
 <!--a href="https://play.google.com/store/apps/details?id=com.unity.aarregame"><img width="323" height="125" src="img/en_badge_web_generic.png"></a-->
 <p>Created by: <a href="https://aarreentertainment.github.io">Aarre Entertainment</a></p>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/Wq_0ew1B_W0" frameborder="0" allowfullscreen></iframe>
+<div class = "master-container">
+<div class = "intrinsic-container">
+<iframe src="https://www.youtube.com/embed/Wq_0ew1B_W0" frameborder="0" allowfullscreen></iframe></div></div>
 </div>
-<div class="privacy-policy">
+<!--div class="privacy-policy">
 <a name="privacy"><h1>PRIVACY POLICY</h1></a>
 <p>In this privacy policy we describe what kind of data we may collect of you in connection with your use of our games, websites and related services and how we may use such data. Below we call these collectively “Services”. By using our Services, you agree to the processing of your data in accordance with this privacy policy.
 </p><p>
@@ -66,7 +68,7 @@ Contact us!
 Should you have any questions regarding this privacy policy or the processing of your personal data, please contact us at aarreentertainment  [-AT-]  gmail.com
 Last updated: 28 December 2016
 </p>
-</div>
+</div --> 
 </body>
 
 
