--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="p:domain_verify" content="d7c186b1048675a1552315c2263fe414"/>
 <meta name="google-site-verification" content="hKnM20xdcGHeeUw9jXAVdqgaezRIAFT5K5tostjlAWM" />
 <link rel="stylesheet" type="text/css" href="aarreent.css" />
 <script>
