--- a/retrocruise/index.html
+++ b/retrocruise/index.html
@@ -14,31 +14,31 @@
 
 	<title>vapordrive</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="A flower picking and treasure collection game for all ages on Android.">
-	<meta name="keywords" content="indiegame, indie, gamedev, game development, gamedev, finland, unity, gaming, games, unity3d, aarre, sandbox, 3d, kids, children, toddler">
+	<meta name="description" content="A infinite racer game with differend retro themed levels.">
+	<meta name="keywords" content="indiegame, indie, gamedev, game development, gamedev, finland, unity, gaming, games, unity3d, retrocruise, infinite runner, racing, android, mobile">
 	<meta name="author" content="Sebastian Laitila">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="game.css" />
 </head>
 <body>
-<div class="image-content-1">
-<div class="bordered-element">
-	<h1>vapordrive</h1>
-	<h2>A vaporwave-themed driving and collection game</h2>
+<div class="image-content-1" style="margin-top:0px;">
+<center style="margin-top:0px;">
+	<h1 style="padding-top: 20%;">retro cruise</h1>
+	<h2>A retro themed infinite driver game</h2>
 	<!--a href="#privacy">Privacy Policy</a-->
 	</div>
-</div>
+</center>
 <div class="about-content">
 <p>
-Vapordrive is all about the aesthetics from the early to 90's, when 3d-graphics were bad and the funniest thing on TV was Seinfeld (seriously).</p>
-<!--a href="https://play.google.com/store/apps/details?id=com.unity.aarregame"><img width="323" height="125" src="img/en_badge_web_generic.png"></a-->
+Retro Cruise is an infinite racer game where you get collectibles and specials while avoiding enemies. It has several retro themed levels, such as a vaporwave, a synthwave and a silent film level.</p>
+<a href="https://play.google.com/store/apps/details?id=com.aarreentertainment.vapordrive"><img width="323" height="125" src="img/en_badge_web_generic.png"></a>
 <p>Created by: <a href="https://aarreentertainment.github.io">Aarre Entertainment</a></p>
 
-<div class = "master-container">
+<!--div class = "master-container">
 <div class = "intrinsic-container">
-<iframe src="https://www.youtube.com/embed/Wq_0ew1B_W0" frameborder="0" allowfullscreen></iframe></div></div>
+<iframe src="https://www.youtube.com/embed/Wq_0ew1B_W0" frameborder="0" allowfullscreen></iframe></div></div-->
 </div>
-<!--div class="privacy-policy">
+<div class="privacy-policy">
 <a name="privacy"><h1>PRIVACY POLICY</h1></a>
 <p>In this privacy policy we describe what kind of data we may collect of you in connection with your use of our games, websites and related services and how we may use such data. Below we call these collectively “Services”. By using our Services, you agree to the processing of your data in accordance with this privacy policy.
 </p><p>
@@ -68,7 +68,7 @@ Contact us!
 Should you have any questions regarding this privacy policy or the processing of your personal data, please contact us at aarreentertainment  [-AT-]  gmail.com
 Last updated: 28 December 2016
 </p>
-</div --> 
+</div>
 </body>
 
 
