--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <div class="menu-content" ><div style="width:100%">
 <h3 class="bordered-element" >GAMES</h3>
 <a href="aarre/index.html"><img class="menu-item" src="img/aarre.png" /> </a>
-<a href="vapordrive/index.html"><img class="menu-item" src="img/vapordrive_512.png" /> </a>
+<a href="retrocruise/index.html"><img class="menu-item" src="img/vapordrive_512.png" /> </a>
 <a href="http://globalgamejam.org/2017/games/song-cardigans"><img class="menu-item" src="img/asbtc_512.png" /> </a>
 </div>
 </div>
