--- a/retrocruise/index.html
+++ b/retrocruise/index.html
@@ -12,7 +12,7 @@
 
 </script>
 
-	<title>vapordrive</title>
+	<title>Retro Cruise</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="A infinite racer game with differend retro themed levels.">
 	<meta name="keywords" content="indiegame, indie, gamedev, game development, gamedev, finland, unity, gaming, games, unity3d, retrocruise, infinite runner, racing, android, mobile">
