2017 christmas update, social medias added

--- a/index.html
+++ b/index.html
@@ -23,9 +23,33 @@
 </head>
 <body>
 <div class="image-content-1">
-<div class="bordered-element">
-	<h1>Aarre Entertainment</h1>
-	<h2>Welcome to our home on the internet</h2>
+<div style="width:100%;padding-top:10%;"><center>
+<img src="img/logo.png" style="max-width:100%" /><br>
+<a href = "https://www.facebook.com/aarreentertainment/" target="_blank">
+<img class="socialMedia" src="img/facebook.png" />
+</a>
+<a href = "https://www.instagram.com/aarreentertainment/" target="_blank">
+<img class="socialMedia" src="img/instagram.png" />
+</a>
+<a href = "https://www.youtube.com/channel/UCBx1n22Ija_d4inzdLORvqg" target="_blank">
+<img class="socialMedia" src="img/youtube.png" />
+</a>
+<a href = "https://aarreentertainment.itch.io/" target="_blank">
+<img class="socialMedia" src="img/itch.png" />
+</a>
+<a href = "https://fi.pinterest.com/aarreentertain/" target="_blank">
+<img class="socialMedia" src="img/pinterest.png" />
+</a>
+<a href = "https://twitter.com/aarreentertainm" target="_blank">
+<img class="socialMedia" src="img/twitter.png" />
+</a>
+<a href = "https://soundcloud.com/aarre-entertainment" target="_blank">
+<img class="socialMedia" src="img/soundcloud.png" />
+</a>
+<a href = "https://www.tumblr.com/blog/aarreentertainment" target="_blank">
+<img class="socialMedia" src="img/tumblr.png" />
+</a>
+</center>
 	</div>
 </div>
 <div class="menu-content" ><div style="width:100%">
