--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
   <title>Aarre</title>
+  
+      <meta http-equiv = "refresh" content = "2; url = https://www.aarreentertainment.com" />
 </head>
 <link href="https://fonts.googleapis.com/css?family=Chewy" rel="stylesheet">
 
