--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <title>Aarre</title>
-  
-      <meta http-equiv = "refresh" content = "2; url = https://www.aarreentertainment.com" />
+	<title>Aarre</title>
+	<link href = "stylesheet.css" rel="stylesheet">
 </head>
-<link href="https://fonts.googleapis.com/css?family=Chewy" rel="stylesheet">
-
-<body style="background-color: green;">
-  <center><br><br><br><br><br><br>
-  <img src="aarre.png" style="max-width:256px;max-height:256px;" />
-  <h1 style="font-family: 'Chewy', cursive; color:white;">Under Construction</h1>
+<body>
+	Website under construction
 </body>
+
 </html>
