--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 
 <article>
 	Website under construction
+	<a href="vampire_1.html" target="_blank">vampire issue 1</a>
 </article>
 </body>
+
+
 
 </html>
