--- a/vampire_1.html
+++ b/vampire_1.html
@@ -16,7 +16,7 @@
 <body>
 
 <pre>
-<code class="language-html">&lt;div class="_df_book" source="vampire_1.pdf"&gt;&lt;/div&gt;</code></pre>
+<div class="_df_book" source="vampire_1.pdf"></div>
 
 
 <!-- jQuery  -->
