--- a/vampire_1.html
+++ b/vampire_1.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<div class="_df_book" source="https://aarre.fun/vampire_1.pdf"></div>
+<div class="_df_book" source="vampire_1.pdf"></div>
 
 
 <!-- jQuery  -->
