--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Aarre</title>
 	<link href = "stylesheet.css" rel="stylesheet">
 </head>
@@ -9,9 +10,11 @@
 	<img class="logo" src="img/aarrelogo.png" />
 </div>
 <div class="flex-container menu">
-  <a class = "menuitem">Games</a>
-  <a class = "menuitem">Music</a>
-  <a class = "menuitem">Contact</a>
+	<a class = "menuitem selected" href="index.html">Home</a>
+	<a class = "menuitem" href="games.html">Games</a>
+	<a class = "menuitem" href="music.html"> Music</a>
+	<a class = "menuitem" href="music.html"> Vampire Zine</a>
+	<a class = "menuitem" href="contact.html">Contact & Socials</a>
 </div>
 
 <article>
@@ -19,7 +22,5 @@
 	<a href="vampire_1.html" target="_blank">vampire issue 1</a>
 </article>
 </body>
-
-
 
 </html>
