--- a/contact.html
+++ b/contact.html
@@ -11,11 +11,11 @@
 		<img alt = "The Aarre Entertainment white flower stencil logo on a dark background" class="logo" src="img/aarrelogo.png"  />
 	</div>
 	<div class="menubar">
-		<a class = "menuitem selected" href="index.html">Home</a>
+		<a class = "menuitem" href="index.html">Home</a>
 		<a class = "menuitem" href="games.html">Games</a>
 		<a class = "menuitem" href="music.html"> Music</a>
 		<a class = "menuitem" href="vampire_index.html"> Vampire Zine</a>
-		<a class = "menuitem" href="contact.html">Contact & Socials</a>
+		<a class = "menuitem selected" href="contact.html">Contact & Socials</a>
 	</div>
 </div>
 <article>
