--- a/vampire_1.html
+++ b/vampire_1.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>DFlip / examples</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Aarre</title>
+	<link href = "stylesheet.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 
 
@@ -14,7 +16,18 @@
 
 </head>
 <body>
-
+<div class = "banner">
+  <div class = "logo_container">
+    <img alt = "The Aarre Entertainment white flower stencil logo on a dark background" class="logo" src="img/aarrelogo.png"  />
+  </div>
+  <div class="menubar">
+    <a class = "menuitem" href="index.html">Home</a>
+    <a class = "menuitem" href="games.html">Games</a>
+    <a class = "menuitem" href="music.html"> Music</a>
+    <a class = "menuitem selected" href="vampire_index.html"> Vampire Zine</a>
+    <a class = "menuitem" href="contact.html">Contact & Socials</a>
+  </div>
+</div>
 <div class="_df_book" source="vampire_1.pdf"></div>
 
 
