--- a/vampire_index.html
+++ b/vampire_index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Aarre</title>
 	<link href = "stylesheet.css" rel="stylesheet">
@@ -19,7 +20,7 @@
 	</div>
 </div>
 <article>
-	Website content
+	<a href ="vampire_1.html">Vampire issue 1/2022</a>
 </article>
 </body>
 
