--- a/index.html
+++ b/index.html
@@ -20,7 +20,25 @@
 	</div>
 </div>
 <article>
-	Website content
+	<h1>NEWS</h1>
+	<img src ="https://aarre.fun/img/neverstopthemadness.jpeg" alt="The album art for Never Stop The Madness" />
+	<h2><a href="music.html">Music</a> News</h2>
+	<h3>New single out!</h3>
+	<p>Never Stop the Madness is out on <a href = "https://sebastianlaitila.bandcamp.com/track/never-stop-the-madness">Bandcamp</a> and <a href ="https://open.spotify.com/album/4TDYkBJDLWgmXsO7AZaaVR?si=OXKQwwhXQsaJuPRwW5fXbA" target="_blank">Spotify</a> along with other streaming services!</p>
+	<iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/4TDYkBJDLWgmXsO7AZaaVR?utm_source=generator&theme=0" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+	<h3>Stilt Fella original soundtrack now on Bandcamp</h3>
+	<p>The 2021 OST For Stilt Fella has been released for Bandcampers as well. Browse to <a href="https://sebastianlaitila.bandcamp.com/album/stilt-fella-original-game-soundtrack" target="_blank">the album page</a> to get it!</p>
+	<hr>
+	<h2><a href="games.html">GAME</a> News</h2>
+	<h3>Madvent calendar out now!</h3>
+	<p>The creepiest, spookiest, greatest advent calendar is out for the third time, and the 21nd day is mine with the help of Chrish on sounds and Vaporshark on 3d models and the initial game concept.</p>
+	<p><a href="https://hauntedps1.itch.io/madvent3" target="_blank">GET IT ON ITCH.IO (PC/WINDOWS ONLY)</a></p>
+	<h3>Play The Infernal Masquerade now!</h3>
+	<p>The Infernal Masquerade is a minesweeper clone made into a victorian masquerade in the PS1 low poly style. You can get it now on <a href="https://aarre.itch.io/the-infernal-masquerade">itch.io</a></p>
+	<hr>
+	<h2><a href="vampire_index.html">VAMPIRE</a> News</h2>
+	<h3>Vampire 01/22 out</h3>
+	<p>Browse to <a href="https://aarre.fun/vampire_1.html">VAMPIRE</a> to read the issue our player or to download it as a PDF</p>
 </article>
 </body>
 
