--- a/vampire_index.html
+++ b/vampire_index.html
@@ -20,7 +20,7 @@
 	</div>
 </div>
 <article>
-	<a href ="vampire_1.html">Vampire issue 1/2022</a>
+	<a href ="vampire_viewer.html?issuename=vampire_1.pdf">Vampire issue 1/2022</a>
 </article>
 </body>
 
