--- a/vampire_viewer.html
+++ b/vampire_viewer.html
@@ -13,11 +13,7 @@
 
   <!-- Icons Stylesheet -->
   <link href="dflip/css/themify-icons.min.css" rel="stylesheet" type="text/css">
-  <script>
-    const queryString = window.location.search;
-    const urlParams = new URLSearchParams(queryString);
-    const issue = urlParams.get('issuename')
-  </script>
+
 
 
 </head>
@@ -31,9 +27,14 @@
     <a class = "menuitem" href="contact.html">Contact & Socials</a>
   </div>
 </div>
-<div class="_df_book" source="issue"></div>
+<div id = "book" class="_df_book" source=""></div>
 
-
+<script>
+  const queryString = window.location.search;
+  const urlParams = new URLSearchParams(queryString);
+  const issue = urlParams.get('issuename')
+  document.getElementById("book").setAttribute("source", issue)
+</script>
 <!-- jQuery  -->
 <script src="dflip/js/libs/jquery.min.js" type="text/javascript"></script>
 <!-- Flipbook main Js file -->
