--- a/vampire_viewer.html
+++ b/vampire_viewer.html
@@ -18,16 +18,20 @@
 
 </head>
 <body>
-<div class = "banner">
-  <div class="menubar">
-    <a class = "menuitem" href="index.html">Home</a>
-    <a class = "menuitem" href="games.html">Games</a>
-    <a class = "menuitem" href="music.html"> Music</a>
-    <a class = "menuitem selected" href="vampire_index.html"> Vampire Zine</a>
-    <a class = "menuitem" href="contact.html">Contact & Socials</a>
+<nav aria-label="Main">
+  <div class = "banner">
+    <div class="menubar">
+      <a class = "menuitem" href="index.html">Home</a>
+      <a class = "menuitem" href="games.html">Games</a>
+      <a class = "menuitem" href="music.html"> Music</a>
+      <a class = "menuitem selected" href="vampire_index.html"> Vampire Zine</a>
+      <a class = "menuitem" href="contact.html">Contact & Socials</a>
+    </div>
   </div>
-</div>
-<div id = "book" class="_df_book" source=""></div>
+</nav>
+<main>
+  <div id = "book" class="_df_book" source=""></div>
+</main>
 
 <script>
   const queryString = window.location.search;
