--- a/music.html
+++ b/music.html
@@ -7,18 +7,20 @@
 	<link href = "stylesheet.css" rel="stylesheet">
 </head>
 <body>
-<div class = "banner">
-	<div class = "logo_container">
-		<img alt = "The Aarre Entertainment white flower stencil logo on a dark background" class="logo" src="img/aarrelogo.png"  />
+<nav aria-label="Main">
+	<div class = "banner">
+		<div class = "logo_container">
+			<img alt = "The Aarre Entertainment white flower stencil logo on a dark background" class="logo" src="img/aarrelogo.png"  />
+		</div>
+		<div class="menubar">
+			<a class = "menuitem" href="index.html">Home</a>
+			<a class = "menuitem" href="games.html">Games</a>
+			<a class = "menuitem selected" href="music.html"> Music</a>
+			<a class = "menuitem" href="vampire_index.html"> Vampire Zine</a>
+			<a class = "menuitem" href="contact.html">Contact & Socials</a>
+		</div>
 	</div>
-	<div class="menubar">
-		<a class = "menuitem" href="index.html">Home</a>
-		<a class = "menuitem" href="games.html">Games</a>
-		<a class = "menuitem selected" href="music.html"> Music</a>
-		<a class = "menuitem" href="vampire_index.html"> Vampire Zine</a>
-		<a class = "menuitem" href="contact.html">Contact & Socials</a>
-	</div>
-</div>
+</nav>
 <article>
 	Website content
 </article>
