--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		<hr>
 		<h2><a href="https://aarre.fun/vampire_index.html">VAMPIRE</a> News</h2>
 		<h3>Vampire 01/22 out</h3>
-		<p>Browse to <a href="https://aarre.fun/vampire_index.html">VAMPIRE</a> to read the issue our player or to download it as a PDF</p>
+		<p>Browse to <a href="https://aarre.fun/vampire_viewer.html?issuename=vampire_1.pdf">VAMPIRE</a> to read the issue our player or to download it as a PDF</p>
 	</article>
 </main>
 <footer>
