--- a/games.html
+++ b/games.html
@@ -7,21 +7,49 @@
 	<link href = "stylesheet.css" rel="stylesheet">
 </head>
 <body>
-<div class = "banner">
-	<div class = "logo_container">
-		<img alt = "The Aarre Entertainment white flower stencil logo on a dark background" class="logo" src="img/aarrelogo.png"  />
+<nav aria-label="Main">
+	<div class = "banner">
+		<div class = "logocontainer">
+			<img alt = "The Aarre Entertainment white flower stencil logo on a dark background" class="logo" src="img/aarrelogo.png"  />
+		</div>
+		<div class="menubar">
+			<button class = "menubutton" onclick="toggleMenu()">Menu</button>
+			<a class = "menuitem hidden" href="index.html">Home</a>
+			<a class = "menuitem hidden selected" href="games.html">Games</a>
+			<a class = "menuitem hidden" href="music.html"> Music</a>
+			<a class = "menuitem hidden" href="vampire_index.html"> Vampire Zine</a>
+			<a class = "menuitem hidden" href="contact.html">Contact & Socials</a>
+		</div>
 	</div>
-	<div class="menubar">
-		<a class = "menuitem" href="index.html">Home</a>
-		<a class = "menuitem selected" href="games.html">Games</a>
-		<a class = "menuitem" href="music.html"> Music</a>
-		<a class = "menuitem" href="vampire_index.html"> Vampire Zine</a>
-		<a class = "menuitem" href="contact.html">Contact & Socials</a>
-	</div>
-</div>
-<article>
-	Website content
-</article>
+</nav>
+<header>
+	<h1>GAMES</h1>
+</header>
+<main>
+	<article>
+		<h2>The Infernal Masquerade</h2>
+		<p>This is the game I'm currently working a commercial release on. It's minesweeper with a twist and within a gothic horror element.</p>
+		<p><iframe frameborder="0" src="https://itch.io/embed/1779791?bg_color=672128&amp;fg_color=ffffff&amp;link_color=ff1111&amp;border_color=6c4747" width="552" height="167"><a href="https://aarre.itch.io/the-infernal-masquerade">The infernal masquerade by aarre</a></iframe></p>
+		<h2>SWOLE from <a href = "https://hauntedps1.itch.io/madvent3">Madvent 3 : Necrosis</a></h2>
+		<p><iframe frameborder="0" src="https://itch.io/embed/1817934?linkback=true&amp;bg_color=222222&amp;fg_color=fffF00&amp;link_color=fa5c5c&amp;border_color=4e4e4e" width="552" height="167"><a href="https://aarre.itch.io/swole">SWOLE by aarre, EldritchRenaissanceCake, VaporShark</a></iframe></p>
+		<h2>My game sites</h2>
+		<h3><a href="https://aarre.itch.io">aarre.itch.io</a></h3>
+		<h4><a href="https://aarreentertainment.itch.io">aarreentertainment.itch.io (old games, jam games, experiments)</a></h4>
+	</article>
+</main>
+<footer>
+
+</footer>
+<script>
+	function toggleMenu() {
+		var elems = document.getElementsByClassName('menuitem')
+		for (var i = 0; i<elems.length;i++)
+		{
+			elems[i].classList.toggle("hidden");
+		}
+		
+	}
+</script>
 </body>
 
 </html>
