--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 <body>
 <nav aria-label="Main">
 	<div class = "banner">
-		<div class = "logo_container">
+		<div class = "logocontainer">
 			<img alt = "The Aarre Entertainment white flower stencil logo on a dark background" class="logo" src="img/aarrelogo.png"  />
 		</div>
 		<div class="menubar">
-			<a class = "menuitem selected" href="index.html">Home</a>
-			<a class = "menuitem" href="games.html">Games</a>
-			<a class = "menuitem" href="music.html"> Music</a>
-			<a class = "menuitem" href="vampire_index.html"> Vampire Zine</a>
-			<a class = "menuitem" href="contact.html">Contact & Socials</a>
+			<button class = "menubutton" onclick="toggleMenu()">Menu</button>
+			<a class = "menuitem hidden selected" href="index.html">Home</a>
+			<a class = "menuitem hidden" href="games.html">Games</a>
+			<a class = "menuitem hidden" href="music.html"> Music</a>
+			<a class = "menuitem hidden" href="vampire_index.html"> Vampire Zine</a>
+			<a class = "menuitem hidden" href="contact.html">Contact & Socials</a>
 		</div>
 	</div>
 </nav>
@@ -29,14 +30,33 @@
 		<img src ="https://aarre.fun/img/neverstopthemadness.jpeg" alt="The album art for Never Stop The Madness" />
 		<h2><a href="https://aarre.fun/music.html">Music</a> News</h2>
 		<h3>New single out!</h3>
-		<p>Never Stop the Madness is out on <a href = "https://sebastianlaitila.bandcamp.com/track/never-stop-the-madness">Bandcamp</a> and <a href ="https://open.spotify.com/album/4TDYkBJDLWgmXsO7AZaaVR?si=OXKQwwhXQsaJuPRwW5fXbA" target="_blank">Spotify</a> along with other streaming services!</p>
+		<p>Never Stop the Madness is out on
+			<a href = "https://sebastianlaitila.bandcamp.com/track/never-stop-the-madness">Bandcamp</a> and <a href ="https://open.spotify.com/album/4TDYkBJDLWgmXsO7AZaaVR?si=OXKQwwhXQsaJuPRwW5fXbA" target="_blank">Spotify</a>
+			along with other streaming services!</p>
+		<p>This was originally supposed to be the first single of the an
+			industrial metal album, but I had to rethink the concept after
+			finding that the tracks were not all that strong, and also the
+			style felt forced at some point. At the point when I made this,
+			it did not feel, which is why I released it.</p>
 		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/4TDYkBJDLWgmXsO7AZaaVR?utm_source=generator&theme=0" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+		<p>I found my old tape recorder along with some cassettes I had recorded
+			in the early 2000s. It featured The Kovenant and Pain among some other
+			European industrial metal acts and proved to be an integral part of my
+			music producer DNA. The track is very extra and unhinged, as I felt like
+			not holding back much in it's presentation.
+		</p>
 		<h3>Stilt Fella original soundtrack now on Bandcamp</h3>
-		<p>The 2021 OST For Stilt Fella has been released for Bandcampers as well. Browse to <a href="https://sebastianlaitila.bandcamp.com/album/stilt-fella-original-game-soundtrack" target="_blank">the album page</a> to get it!</p>
+		<p>The 2021 OST For Stilt Fella has been released for Bandcampers as
+			well. Browse to <a href="https://sebastianlaitila.bandcamp.com/album/stilt-fella-original-game-soundtrack" target="_blank">
+			the album page</a> to get it!</p>
+		<p>
+			And get Stilt Fella from <a href = "https://store.steampowered.com/app/1133590/Stilt_Fella/">Steam</a>. It's a stilt walking
+			physics game that goes to quite epic levels in difficulty.
+		</p>
 		<hr>
 		<h2><a href="https://aarre.fun/games.html">GAME</a> News</h2>
 		<h3>Madvent calendar out now!</h3>
-		<p>The creepiest, spookiest, greatest advent calendar is out for the third time, and the 21nd day is mine with the help of Chrish on sounds and Vaporshark on 3d models and the initial game concept.</p>
+		<p>The creepiest, spookiest, greatest advent calendar is out for the third time, and the 21nd day, <a href="https://aarre.itch.io/swole" target="_blank">SWOLE</a>, is mine with the help of Chrish on sounds and Vaporshark on 3d models and the initial game concept.</p>
 		<p><a href="https://hauntedps1.itch.io/madvent3" target="_blank">GET IT ON ITCH.IO (PC/WINDOWS ONLY)</a></p>
 		<h3>Play The Infernal Masquerade now!</h3>
 		<p>The Infernal Masquerade is a minesweeper clone made into a victorian masquerade in the PS1 low poly style. You can get it now on <a href="https://aarre.itch.io/the-infernal-masquerade">itch.io</a></p>
@@ -49,6 +69,16 @@
 <footer>
 
 </footer>
+<script>
+	function toggleMenu() {
+		var elems = document.getElementsByClassName('menuitem')
+		for (var i = 0; i<elems.length;i++)
+		{
+			elems[i].classList.toggle("hidden");
+		}
+		
+	}
+</script>
 </body>
 
 </html>
