--- a/music.html
+++ b/music.html
@@ -9,21 +9,46 @@
 <body>
 <nav aria-label="Main">
 	<div class = "banner">
-		<div class = "logo_container">
+		<div class = "logocontainer">
 			<img alt = "The Aarre Entertainment white flower stencil logo on a dark background" class="logo" src="img/aarrelogo.png"  />
 		</div>
 		<div class="menubar">
-			<a class = "menuitem" href="index.html">Home</a>
-			<a class = "menuitem" href="games.html">Games</a>
-			<a class = "menuitem selected" href="music.html"> Music</a>
-			<a class = "menuitem" href="vampire_index.html"> Vampire Zine</a>
-			<a class = "menuitem" href="contact.html">Contact & Socials</a>
+			<button class = "menubutton" onclick="toggleMenu()">Menu</button>
+			<a class = "menuitem hidden" href="index.html">Home</a>
+			<a class = "menuitem hidden" href="games.html">Games</a>
+			<a class = "menuitem hidden selected" href="music.html"> Music</a>
+			<a class = "menuitem hidden" href="vampire_index.html"> Vampire Zine</a>
+			<a class = "menuitem hidden" href="contact.html">Contact & Socials</a>
 		</div>
 	</div>
 </nav>
-<article>
-	Website content
-</article>
+<header>
+	<h1>MUSIC</h1>
+</header>
+<main>
+	<article>
+		<h2>Bandcamp</h2>
+		<p><a href = "https://sebastianlaitila.bandcamp.com">Go to my artist page</a></p>
+		<p><iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/track=2657051276/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://sebastianlaitila.bandcamp.com/track/never-stop-the-madness">Never Stop the Madness by Sebastian Laitila</a></iframe></p>
+		<p><iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=887855104/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://sebastianlaitila.bandcamp.com/album/stilt-fella-original-game-soundtrack">Stilt Fella (Original Game Soundtrack) by Sebastian Laitila</a></iframe></p>
+		<h2>Spotify</h2>
+			<p><a href = "https://open.spotify.com/artist/6GAfbajVf21bra9DkpLN1p?si=px4pX4hwSoSeR3lRKB5qXQ">Go to my artist page</a>
+			<p><iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/6GAfbajVf21bra9DkpLN1p?utm_source=generator" width="60%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></p>
+	</article>
+</main>
+<footer>
+
+</footer>
+<script>
+	function toggleMenu() {
+		var elems = document.getElementsByClassName('menuitem')
+		for (var i = 0; i<elems.length;i++)
+		{
+			elems[i].classList.toggle("hidden");
+		}
+		
+	}
+</script>
 </body>
 
 </html>
