--- a/vampire_viewer.html
+++ b/vampire_viewer.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Aarre</title>
-	<link href = "stylesheet.css" rel="stylesheet">
-  <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 
 
   <!-- Flipbook StyleSheet -->
@@ -14,26 +11,32 @@
   <!-- Icons Stylesheet -->
   <link href="dflip/css/themify-icons.min.css" rel="stylesheet" type="text/css">
 
-
-
+	<title>Aarre</title>
+	<link href = "stylesheet.css" rel="stylesheet">
 </head>
 <body>
 <nav aria-label="Main">
-  <div class = "banner">
-    <div class="menubar">
-      <a class = "menuitem" href="index.html">Home</a>
-      <a class = "menuitem" href="games.html">Games</a>
-      <a class = "menuitem" href="music.html"> Music</a>
-      <a class = "menuitem selected" href="vampire_index.html"> Vampire Zine</a>
-      <a class = "menuitem" href="contact.html">Contact & Socials</a>
-    </div>
-  </div>
+	<div class = "banner">
+
+		<div class="menubar">
+			<button class = "menubutton" onclick="toggleMenu()">Menu</button>
+			<a class = "menuitem hidden" href="index.html">Home</a>
+			<a class = "menuitem hidden" href="games.html">Games</a>
+			<a class = "menuitem hidden" href="music.html"> Music</a>
+			<a class = "menuitem hidden selected" href="vampire_index.html"> Vampire Zine</a>
+			<a class = "menuitem hidden" href="contact.html">Contact & Socials</a>
+		</div>
+	</div>
 </nav>
 <main>
   <a href="" id="articlelink">The reader sucks on mobile. Download VAMPIRE instead from this link</a>
   <div id = "book" class="_df_book" source=""></div>
 </main>
 
+
+<footer>
+
+</footer>
 <script>
   const queryString = window.location.search;
   const urlParams = new URLSearchParams(queryString);
@@ -45,6 +48,16 @@
 <script src="dflip/js/libs/jquery.min.js" type="text/javascript"></script>
 <!-- Flipbook main Js file -->
 <script src="dflip/js/dflip.min.js" type="text/javascript"></script>
-
+<script>
+	function toggleMenu() {
+		var elems = document.getElementsByClassName('menuitem')
+		for (var i = 0; i<elems.length;i++)
+		{
+			elems[i].classList.toggle("hidden");
+		}
+		
+	}
+</script>
 </body>
+
 </html>
