fixed itch icons

--- a/games.html
+++ b/games.html
@@ -29,9 +29,12 @@
 	<article>
 		<h2>The Infernal Masquerade</h2>
 		<p>This is the game I'm currently working a commercial release on. It's minesweeper with a twist and within a gothic horror element.</p>
-		<p><iframe frameborder="0" src="https://itch.io/embed/1779791?bg_color=672128&amp;fg_color=ffffff&amp;link_color=ff1111&amp;border_color=6c4747" width="552" height="167"><a href="https://aarre.itch.io/the-infernal-masquerade">The infernal masquerade by aarre</a></iframe></p>
+		<p>
+			<iframe frameborder="0" src="https://itch.io/embed/1779791?bg_color=672128&amp;fg_color=ffffff&amp;link_color=ff1111&amp;border_color=6c4747" width="208" height="167"><a href="https://aarre.itch.io/the-infernal-masquerade">The infernal masquerade by aarre</a></iframe>		</p>
 		<h2>SWOLE from <a href = "https://hauntedps1.itch.io/madvent3">Madvent 3 : Necrosis</a></h2>
-		<p><iframe frameborder="0" src="https://itch.io/embed/1817934?linkback=true&amp;bg_color=222222&amp;fg_color=fffF00&amp;link_color=fa5c5c&amp;border_color=4e4e4e" width="552" height="167"><a href="https://aarre.itch.io/swole">SWOLE by aarre, EldritchRenaissanceCake, VaporShark</a></iframe></p>
+		<p>
+			<iframe frameborder="0" src="https://itch.io/embed/1817934?linkback=true&amp;bg_color=222222&amp;fg_color=fffF00&amp;link_color=fa5c5c&amp;border_color=4e4e4e" width="208" height="167"><a href="https://aarre.itch.io/swole">SWOLE by aarre, EldritchRenaissanceCake, VaporShark</a></iframe>
+		</p>
 		<h2>My game sites</h2>
 		<h3><a href="https://aarre.itch.io">aarre.itch.io</a></h3>
 		<h4><a href="https://aarreentertainment.itch.io">aarreentertainment.itch.io (old games, jam games, experiments)</a></h4>
