--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,11 @@
 		<h2>How to contact me</h2>
 		<p>The easiest way to get in touch with me is via Discord, where my username is Sebastian_#4454</p>
 		<p>I can also be found at <a href = "https://mastodon.gamedev.place/@aarre">Mastodon</a>. I also occasionally use <a href ="https://twitter.com/aarresebu">Twitter</a>.</p>
+		<hr>
+		<h2>WEBRING</h2>
+		<p>Browse to the sites of amazing creators!</p>
+		<a href ="https://nikitavychuz.com">Nikita Vychuzanin</a><br>
+		<hr>
 		<h2>Tiktok</h2>
 		<p>Yes, this is a thing too.</p>
 		<p><blockquote class="tiktok-embed" cite="https://www.tiktok.com/@aarreentertainment" data-unique-id="aarreentertainment" data-embed-type="creator" style="max-width: 720px; min-width: 288px;" > <section> <a target="_blank" href="https://www.tiktok.com/@aarreentertainment?refer=creator_embed">@aarreentertainment</a> </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script></p>
