--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,7 @@
 		<h2>WEBRING</h2>
 		<p>Browse to the sites of amazing creators!</p>
 		<a href ="https://nikitavychuz.com">Nikita Vychuzanin</a><br>
+		<a href = "https://xena-spectrale.net/">Xena-Spectrale</a>
 		<hr>
 		<h2>Tiktok</h2>
 		<p>Yes, this is a thing too.</p>
