nikita's name fixed

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 		<hr>
 		<h2>WEBRING</h2>
 		<p>Browse to the sites of amazing creators!</p>
-		<a href ="https://nikitavychuz.com">Nikita Vychuzanin</a><br>
+		<a href ="https://nikitavychuz.com">Nikita Vychuzhanin</a><br>
 		<a href = "https://xena-spectrale.net/">Xena-Spectrale</a>
 		<hr>
 		<h2>Tiktok</h2>
