inf masq update

--- a/index.html
+++ b/index.html
@@ -27,23 +27,14 @@
 </header>
 <main>
 	<article>
-		<img src ="https://aarre.fun/img/neverstopthemadness.jpeg" alt="The album art for Never Stop The Madness" />
-		<h2><a href="https://aarre.fun/music.html">Music</a> News</h2>
-		<h3>New single out!</h3>
-		<p>Never Stop the Madness is out on
-			<a href = "https://sebastianlaitila.bandcamp.com/track/never-stop-the-madness">Bandcamp</a> and <a href ="https://open.spotify.com/album/4TDYkBJDLWgmXsO7AZaaVR?si=OXKQwwhXQsaJuPRwW5fXbA" target="_blank">Spotify</a>
-			along with other streaming services!</p>
-		<p>This was originally supposed to be the first single of the an
-			industrial metal album, but I had to rethink the concept after
-			finding that the tracks were not all that strong, and also the
-			style felt forced at some point. At the point when I made this,
-			it did not feel, which is why I released it.</p>
-		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/4TDYkBJDLWgmXsO7AZaaVR?utm_source=generator&theme=0" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-		<p>I found my old tape recorder along with some cassettes I had recorded
-			in the early 2000s. It featured The Kovenant and Pain among some other
-			European industrial metal acts and proved to be an integral part of my
-			music producer DNA. The track is very extra and unhinged, as I felt like
-			not holding back much in it's presentation.
+		<img src ="https://aarre.fun/img/infernal_masquerade.png" alt="The Infernal Masquerade logo and key art" />
+		<h3>Wishlist the infernal masquerade!</h3>
+		<iframe src="https://store.steampowered.com/widget/2219280/" frameborder="0" width="646" height="190"></iframe>
+		<p>The Infernal Masquerade is a gothic horror PS2 -inspired take on the classic minesweeper game along with resource management, where taking risks and doing speedy reveals gives you access to helper items that make it easier to find the hidden, masked vampires.
+		</p>
+		<p>The year is 1868, and the city of London is in the grip of a strange and deadly plague. People are disappearing from the streets, never to be seen again, and rumors of vampires have begun to spread like wildfire.
+		</p><p>the midst of this chaos, a solitary figure moves through the darkness, a hunter of the undead. Armed with a unique weapon - a bouquet of deadly roses that can kill with a single touch - the vampire hunter stalks the shadows, seeking out the hidden predators that lurk among the city's elite.
+		</p><p>Tonight, the hunter has been invited to a masquerade ball, a glittering affair attended by the wealthiest and most powerful members of society. But beneath the guise of revelry and elegance, the hunter knows that danger lurks. For at a masquerade, even the most ordinary faces can hide the most monstrous secrets. And the hunter is ready to strike, using their deadly roses to deliver justice to the vampires that prowl the night.</p>
 		</p>
 		<h3>Stilt Fella original soundtrack now on Bandcamp</h3>
 		<p>The 2021 OST For Stilt Fella has been released for Bandcampers as
@@ -53,17 +44,6 @@
 			And get Stilt Fella from <a href = "https://store.steampowered.com/app/1133590/Stilt_Fella/">Steam</a>. It's a stilt walking
 			physics game that goes to quite epic levels in difficulty.
 		</p>
-		<hr>
-		<h2><a href="https://aarre.fun/games.html">GAME</a> News</h2>
-		<h3>Madvent calendar out now!</h3>
-		<p>The creepiest, spookiest, greatest advent calendar is out for the third time, and the 21nd day, <a href="https://aarre.itch.io/swole" target="_blank">SWOLE</a>, is mine with the help of Chrish on sounds and Vaporshark on 3d models and the initial game concept.</p>
-		<p><a href="https://hauntedps1.itch.io/madvent3" target="_blank">GET IT ON ITCH.IO (PC/WINDOWS ONLY)</a></p>
-		<h3>Play The Infernal Masquerade now!</h3>
-		<p>The Infernal Masquerade is a minesweeper clone made into a victorian masquerade in the PS1 low poly style. You can get it now on <a href="https://aarre.itch.io/the-infernal-masquerade">itch.io</a></p>
-		<hr>
-		<h2><a href="https://aarre.fun/vampire_index.html">VAMPIRE</a> News</h2>
-		<h3>Vampire 01/22 out</h3>
-		<p>Browse to <a href="https://aarre.fun/vampire_viewer.html?issuename=vampire_1.pdf">VAMPIRE</a> to read the issue our player or to download it as a PDF</p>
 	</article>
 </main>
 <footer>
