--- a/games.html
+++ b/games.html
@@ -27,8 +27,11 @@
 </header>
 <main>
 	<article>
+		<h1>Releases</h1>
+		<iframe src="https://store.steampowered.com/widget/2219280/" frameborder="0" width="646" height="190"></iframe>
+
+		<h1>Jam games</h1>
 		<h2>The Infernal Masquerade</h2>
-		<p>This is the game I'm currently working a commercial release on. It's minesweeper with a twist and within a gothic horror element.</p>
 		<p>
 			<iframe frameborder="0" src="https://itch.io/embed/1779791?bg_color=672128&amp;fg_color=ffffff&amp;link_color=ff1111&amp;border_color=6c4747" width="208" height="167"><a href="https://aarre.itch.io/the-infernal-masquerade">The infernal masquerade by aarre</a></iframe>		</p>
 		<h2>SWOLE from <a href = "https://hauntedps1.itch.io/madvent3">Madvent 3 : Necrosis</a></h2>
