--- a/index.html
+++ b/index.html
@@ -28,21 +28,13 @@
 <main>
 	<article>
 		<img src ="https://aarre.fun/img/infernal_masquerade.png" alt="The Infernal Masquerade logo and key art" />
-		<h3>Wishlist the infernal masquerade!</h3>
+		<h3>The Infernal Masquerade is out!</h3>
 		<iframe src="https://store.steampowered.com/widget/2219280/" frameborder="0" width="646" height="190"></iframe>
 		<p>The Infernal Masquerade is a gothic horror PS2 -inspired take on the classic minesweeper game along with resource management, where taking risks and doing speedy reveals gives you access to helper items that make it easier to find the hidden, masked vampires.
 		</p>
 		<p>The year is 1868, and the city of London is in the grip of a strange and deadly plague. People are disappearing from the streets, never to be seen again, and rumors of vampires have begun to spread like wildfire.
 		</p><p>the midst of this chaos, a solitary figure moves through the darkness, a hunter of the undead. Armed with a unique weapon - a bouquet of deadly roses that can kill with a single touch - the vampire hunter stalks the shadows, seeking out the hidden predators that lurk among the city's elite.
 		</p><p>Tonight, the hunter has been invited to a masquerade ball, a glittering affair attended by the wealthiest and most powerful members of society. But beneath the guise of revelry and elegance, the hunter knows that danger lurks. For at a masquerade, even the most ordinary faces can hide the most monstrous secrets. And the hunter is ready to strike, using their deadly roses to deliver justice to the vampires that prowl the night.</p>
-		</p>
-		<h3>Stilt Fella original soundtrack now on Bandcamp</h3>
-		<p>The 2021 OST For Stilt Fella has been released for Bandcampers as
-			well. Browse to <a href="https://sebastianlaitila.bandcamp.com/album/stilt-fella-original-game-soundtrack" target="_blank">
-			the album page</a> to get it!</p>
-		<p>
-			And get Stilt Fella from <a href = "https://store.steampowered.com/app/1133590/Stilt_Fella/">Steam</a>. It's a stilt walking
-			physics game that goes to quite epic levels in difficulty.
 		</p>
 	</article>
 </main>
